# EasyScraper

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: docker-build-push.yaml  push.yaml  release.yaml
api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  server.py  test.py
api/app/: util.py
api/app/blob_store/: __init__.py  fs_blob_store.py  s3_blob_store.py
api/app/celery/: celery.py  tasks.py
api/app/db/: db_utils.py  engine.py
api/app/models/: ai_prompt.py  auth.py  common.py  page_template.py  paging.py  project.py  scrape_rule.py  scrape_run.py  seed_page.py
api/app/routers/: ai_prompt.py  auth.py  page_template.py  project.py  scrape_rule.py  scrape_run.py  seed_page.py
db/: V1__base.sql  V2__user_full_name.sql  V3__project_url.sql  V4__audit_fields.sql  V5__rate_limit.sql  V6__user_fields.sql  V7__scrape_rule_description.sql  V8__download_as_image.sql
docs/: README.md  index.html  openapi.json  postman.json
docs/plantuml/src/: db-schema.plantuml  deployment.plantuml  sequence-login.plantuml  sequence-signup.plantuml  tech-stack.plantuml  use-case-diagram.plantuml
plantuml/: db-schema.txt  use-case-diagram.txt
plantuml/src/: db-schema.plantuml  tech-stack.plantuml
redoc/: openapi.json
ui/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/health/: route.ts
ui/app/callback/github/: page.tsx
ui/app/dashboard/: app-sidebar.tsx  header.tsx  layout.tsx  page.tsx  projects-list.tsx
ui/app/dashboard/projects/[id]/edit/: page.tsx  scrape-rules-list.tsx  sheet-edit-page-template.tsx  sheet-edit-scrape-rule.tsx  sheet-edit-seed-page.tsx  (+5 more)
ui/app/lib/: token.ts  types.ts
ui/app/login/: page.tsx
ui/app/signup/: page.tsx
ui/components/app/: app-breadcrumbs.tsx  app-sidebar.tsx  projects-list.tsx  projects-table.tsx
ui/src/: App.tsx
