[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1.0",
    "autoscraper>=1.1.14",
    "celery>=5.4.0",
    "fastapi[standard]>=0.115.4",
    "pydantic[email]>=2.9.2",
    "pyjwt>=2.9.0",
    "python-ulid[pydantic]>=3.0.0",
    "redis>=5.2.0",
    "sqlmodel>=0.0.22",
]
