[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "autoscraper>=1.1.14",
    "boto3>=1.35.59",
    "celery-heimdall>=1.0.1",
    "celery>=5.4.0",
    "fastapi[standard]>=0.115.4",
    "httpx>=0.27.2",
    "openai>=1.54.4",
    "postgres>=4.0",
    "pydantic[email]>=2.9.2",
    "pyjwt>=2.9.0",
    "pytest>=8.3.3",
    "python-multipart==0.0.18",
    "python-ulid[pydantic]>=3.0.0",
    "redis>=5.2.0",
    "sqlmodel>=0.0.22",
    "xlsxwriter>=3.2.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pylint>=3.3.2",
    "flake8-bugbear>=24.12.12",
    "playwright>=1.49.1",
    "fake-useragent>=2.0.3",
    "pillow>=11.0.0",
    "lxml[html-clean]>=5.3.0",
    "token-throttler>=1.5.1",
]
